Basic To-Do List

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.container {
+  height: 100vh;
+  width: 100vw;
+
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.appHeader {
+  height: 12vh;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  padding: max(16px, 2vh) max(32px, 2vw);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FAF8F6;
+
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.appHeader > h1 {
+  margin: 0;
+  font-size: clamp(3rem, 5vw , 5rem);
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.appContent {
+  width: 100vw;
+  height: 100%;
+
+  padding: max(32px, 2vw);
+
+  background-color: #C6E2E9;
+
+  overflow: scroll;
 }
